# aries-oob-shortener

./: .dockerignore  .env  .gitignore  .ycm_extra_conf.py  Cargo.toml  Dockerfile  README.md
.github/actions/check-version/: action.yml
.github/actions/publish-image/: action.yml
.github/workflows/: audit-scheduled.yml  audit.yml  main.yml
ci/: Dockerfile.base  Dockerfile.prod  Dockerfile.test  build.prod.sh  build.test.sh  docker-compose.yml
config/: localhost.toml
docs/: openapi.yaml
src/: lib.rs  main.rs  setup.rs
src/api/: health.rs  internal.rs  mod.rs  redirect.rs
src/application/: mod.rs
src/config/: config.rs  env.rs  mod.rs
src/configuration/: config.rs  env.rs  mod.rs
src/error/: convertors.rs  error.rs  error_struct.rs  error_type.rs  mod.rs  result.rs
src/integration/: ecs.rs  mod.rs  s3.rs
src/logging/: layer_json.rs  layer_pretty.rs  mod.rs  subscriber.rs
src/logging/layers/: common.rs  layer_json.rs  layer_pretty.rs  layer_storage.rs  mod.rs
src/server/: mod.rs  services.rs  tls.rs
src/server/internal/: mod.rs  scopes.rs
src/service/: mod.rs  shorten.rs
src/storage/: mod.rs  redis.rs
tests/: client.rs  main.rs
tests/api/: health.rs  internal.rs  mod.rs
tests/utils/: mod.rs  setup.rs
