[package]
name = "dlt-shortener"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"

[lib]
path = "src/lib.rs"
name = "dlt_shortener"

[[bin]]
path = "src/main.rs"
name = "dlt_shortener"

[dependencies]
actix-web = { version = "4.1.0", features = ["rustls"] }
aws-config = "0.46.0"
aws-sdk-s3 = "0.16.0"
base64 = "0.13.0"
chrono = "0.4.19"
config = { version = "0.13.1", default-features = false, features = ["toml"] }
dotenv = "0.15.0"
log = "0.4.16"
redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.140", features = [ "derive" ] }
serde-aux = "3"
serde_json = "1.0.82"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = { version = "2.2.2", features = ["serde"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "std", "fmt", "json"] }
tracing-actix-web = "0.6.0"
tracing-log = "0.1.3"
tracing-attributes = "0.1.22"
